--- a/locales/wcg-bot_fr-FR.json
+++ b/locales/wcg-bot_fr-FR.json
@@ -21,7 +21,7 @@
 	"usernameMismatch": "Ce nom ne correspond pas au compte WGC ID {{accountID}}",
 	"notValidAddress": "Cette adresse n'est pas valide.",
 	"fixUsernameMismatch": "Le nom de compte: {{accountName}} ne correspond pas à l'id {{accountID}}. Vous ne recevrez pas de paiements tant que ce problème ne sera pas résolu ou que vous n'aurez pas authentifié ce nouveau compte",
-	"visitWiki":"Pour plus d'information, merci de visiter notre wiki: https://wiki.byteball.org/WCG_distribution",
+	"visitWiki":"Pour plus d'information, merci de visiter notre wiki: https://wiki.obyte.org/WCG_distribution",
 	"retryButton": "Réessayer",
 	"anotherUsernameButton": "Changer pour un autre nom de compte",
 	"payoutForPreviousWork": "Un paiement de {{amountByte}}GB et {{amountAsset}} {{labelAsset}} vous a été fait en récompense de vos précédentes contributions à World Community Grid."
