--- a/locales/wcg-bot_tl-PH.json
+++ b/locales/wcg-bot_tl-PH.json
@@ -21,7 +21,7 @@
 	"usernameMismatch": "Ang pangalan na ito ay hindi tumutugon sa WCG account ID na {{accountID}}",
 	"notValidAddress": "Ito ay hindi isang balidong address.",
 	"fixUsernameMismatch": "Ang pangalan ng account: {{accountName}} ay hindi tumutugon sa ID na {{accountID}}. Hindi ka makakatanggap ng bayad hanggang sa maitama mo ang isyu o ma-link ang iyong bagung WCG na account.",
-	"visitWiki": "Para sa karagdagang impormasyon, mangyaring bisitahin ang aming wiki: https://wiki.byteball.org/WCG_distribution",
+	"visitWiki": "Para sa karagdagang impormasyon, mangyaring bisitahin ang aming wiki: https://wiki.obyte.org/WCG_distribution",
 	"retryButton": "Subukan muli",
 	"anotherUsernameButton": "Lumipat sa ibang pangalan ng account",
 	"payoutForPreviousWork": "May kabayaran na {{amountByte}}GB at {{amountAsset}} {{labelAsset}} ang ginawa para gantimpalaan ang iyong nakaraang kontribusyon sa World Community Grid."
