--- a/locales/wcg-bot_vi-VN.json
+++ b/locales/wcg-bot_vi-VN.json
@@ -1,5 +1,5 @@
 {
-	"newAccount": "Vui lòng tạo tài khoản với mạng Lưới Cộng đồng Quốc tế tại https://join.worldcommunitygrid.org?teamId={{teamId}} hoặc sửa đổi tài khoản hiện có với tên người dùng này: {{username}} và đảm bảo rằng bạn đã chọn 'Hiển thị thông tin của tôi' trên trang Tiểu sử của tôi. Bạn có thể xem hướng dẫn từng bước trên trang wiki https://wiki.byteball.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
+	"newAccount": "Vui lòng tạo tài khoản với mạng Lưới Cộng đồng Quốc tế tại https://join.worldcommunitygrid.org?teamId={{teamId}} hoặc sửa đổi tài khoản hiện có với tên người dùng này: {{username}} và đảm bảo rằng bạn đã chọn 'Hiển thị thông tin của tôi' trên trang Tiểu sử của tôi. Bạn có thể xem hướng dẫn từng bước trên trang wiki https://wiki.obyte.org/WCG_distribution#A_quick_guide_to_linking_your_wallet_with_WCG",
 	"usernameCanBeChanged": "Bạn có thể thay đổi nó sau này nếu bạn muốn. Nhấp vào liên kết bên dưới khi hoàn tất.",
 	"checkAccountButton": "Kiểm tra tài khoản của tôi",
 	"accountLinked": "Tài khoản WCG của bạn được liên kết thành công.",
@@ -21,10 +21,10 @@
 	"usernameMismatch": "Tên này không tương ứng với ID tài khoản WCG {{accountID}}",
 	"notValidAddress": "Đây là địa chỉ không hợp lệ.",
 	"fixUsernameMismatch": "Tên tài khoản: {{accountName}} không tương ứng với ID {{accountID}}. Bạn sẽ không nhận được thanh toán cho đến khi bạn khắc phục vấn đề này hoặc liên kết tài khoản WCG mới.",
-	"visitWiki": "Để biết thêm chi tiết, xin vui lòng truy cập vào wiki của chúng tôi: https://wiki.byteball.org/WCG_distribution",
+	"visitWiki": "Để biết thêm chi tiết, xin vui lòng truy cập vào wiki của chúng tôi: https://wiki.obyte.org/WCG_distribution",
 	"retryButton": "Thử lại",
 	"anotherUsernameButton": "Thay đổi sang một tài khoản khác",
 	"payoutForPreviousWork": "Một khoản thanh toán {{amountByte}} GB và {{amountAsset}} {{labelAsset}} đã được thực hiện để thưởng cho các đóng góp vừa qua của bạn trong Mạng lưới Cộng đồng Thế giới.",
-	"userInTeam": "Là thành viên của nhóm byteball.org, bạn sẽ nhận được tiền thưởng {{bonus}}%.",
-	"userNotInTeam": "Bạn có thể tham gia nhóm byteball.org và nhận tiền thưởng {{bonus}}%. Truy cập https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} để tham gia cùng chúng tôi."
+	"userInTeam": "Là thành viên của nhóm obyte.org, bạn sẽ nhận được tiền thưởng {{bonus}}%.",
+	"userNotInTeam": "Bạn có thể tham gia nhóm obyte.org và nhận tiền thưởng {{bonus}}%. Truy cập https://www.worldcommunitygrid.org/team/viewTeamInfo.do?teamId={{teamId}} để tham gia cùng chúng tôi."
 }
